Adding and editing categories

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,18 @@ lang.change=Change the language
 lang.eng=English
 lang.fr=French
 mainpage.title=LMS Volumen - Main page
+category.page_title=Categories
+category.page_title_add=Add category
+category.page_title_edit=Edit category
+category.add=Add category
+category.all=All categories
+category.name=Category
+category.description_optional=Description (optional)
+category.parent_category=Parent category
+save=Save
+error.category.name_required=Category name is required
+category.root=<Root category>
+category.notfound.page_title=Category not found
+edit=Edit
+delete=Delete
+confirm.delete_category=Are you sure to remove this category?
