Deleting category, Circular reference check

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,5 @@ category.notfound.page_title=Category not found
 edit=Edit
 delete=Delete
 confirm.delete_category=Are you sure to remove this category?
+error.category_not_found=Category not found
+error.category.circular_reference=Circular reference found
