CRUD for courses

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,3 +21,11 @@ delete=Delete
 confirm.delete_category=Are you sure to remove this category?
 error.category_not_found=Category not found
 error.category.circular_reference=Circular reference found
+course.create=Add course
+course.page_title_add=Add course
+course.name=Course name
+course.description_optional=Course description (optional)
+confirm.delete_course=Are you sure to remove this category?
+error.course.name_required=Course name is required
+course.notfound.page_title=Course not found
+course.page_title_edit=Edit course
