CRUD for chapter/unit

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,7 +25,20 @@ course.create=Add course
 course.page_title_add=Add course
 course.name=Course name
 course.description_optional=Course description (optional)
-confirm.delete_course=Are you sure to remove this category?
+confirm.delete_course=Are you sure to remove this course?
 error.course.name_required=Course name is required
 course.notfound.page_title=Course not found
 course.page_title_edit=Edit course
+category.courses_in_this_category=Courses in this category.
+unit.create=Add unit
+unit.page_title_add=Add unit
+course.adding_unit_to_course=Adding unit to course: 
+confirm.delete_unit=Are you sure to remove this unit?
+unit.name=Unit name
+unit.description_optional=Unit description (optional)
+error.unit.name_required=Unit name is required
+unit.sequence_number=Order number
+course.edit=Edit course
+chapter.edit=Edit unit
+unit.page_title_edit=Edit unit
+course=Course
