CRUD for Lecture

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,3 +42,14 @@ course.edit=Edit course
 chapter.edit=Edit unit
 unit.page_title_edit=Edit unit
 course=Course
+lecture.add=Add lecture
+lecture.page_title_add=Add lecture
+lecture=Lecture
+unit=Unit
+lecture.name=Lecture name
+lecture.description_optional=Lecture description (optional)
+lecture.sequence_number=Order number
+lecture.parent_unit=Containing module
+confirm.delete_lecture=Are you sure to remove this lecture?
+error.lecture.name_required=Lecture name is required
+lecture.edit=Edit lecture
