--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,3 +53,12 @@ lecture.parent_unit=Containing module
 confirm.delete_lecture=Are you sure to remove this lecture?
 error.lecture.name_required=Lecture name is required
 lecture.edit=Edit lecture
+lecture.add_test=Add test
+lecture.edit_test=Edit test
+lecture=Lecture
+test.attach_to_lecture=Attach to lecture
+confirm.delete_test=Are you sure to remove this test?
+lecture.edit_test=Edit test
+test.edit_page_title=Edit test
+lecture.already_contains_test=The lecture already contains a test
+
