Edit question form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,4 +61,13 @@ confirm.delete_test=Are you sure to remove this test?
 lecture.edit_test=Edit test
 test.edit_page_title=Edit test
 lecture.already_contains_test=The lecture already contains a test
-
+test.add_question=Add question
+question.edit_page_title=Edit question
+confirm.delete_question=Are you sure to remove this question?
+question.text_of_question=Text of question
+question.question_type=Question type
+question.type_name_single=Single answer
+question.type_name_multiple=Multiple selection
+question.type_name_text=Enter a text
+question.type_name_reorder=Reorder answers
+test.add_another_question=Add another question
