Managing test questions

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -71,3 +71,6 @@ question.type_name_multiple=Multiple selection
 question.type_name_text=Enter a text
 question.type_name_reorder=Reorder answers
 test.add_another_question=Add another question
+message.saved=Saved
+test.questions_of_this_test=Questions of this test
+category.edit=Edit category
