Run an exam/test

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,6 +44,7 @@ unit.page_title_edit=Edit unit
 course=Course
 lecture.add=Add lecture
 lecture.page_title_add=Add lecture
+lecture.page_title_edit=Edit lecture
 lecture=Lecture
 unit=Unit
 lecture.name=Lecture name
@@ -74,3 +75,12 @@ test.add_another_question=Add another question
 message.saved=Saved
 test.questions_of_this_test=Questions of this test
 category.edit=Edit category
+header.categories_of_courses=Categories
+header.content_management=Content management
+test.add_to_any_lecture_to_c=Please add a test to any lecture to create test for unit or course
+course.add_test_to_course=Add test to course
+test.run=Run test
+test.running=Runing test
+test.result.true=True
+test.result.false=False
+
