--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -80,7 +80,8 @@ header.content_management=Content management
 test.add_to_any_lecture_to_c=Please add a test to any lecture to create test for unit or course
 course.add_test_to_course=Add test to course
 test.run=Run test
-test.running=Runing test
+test.running=Running test
 test.result.true=True
 test.result.false=False
-
+header.catalog=Catalog
+header.all_courses=All courses
