--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -85,5 +85,5 @@ test.result.true=\u0412\u0435\u0440\u043D\u043E
 test.result.false=\u041D\u0435 \u0432\u0435\u0440\u043D\u043E
 header.catalog=\u041A\u0430\u0442\u0430\u043B\u043E\u0433
 header.all_courses=\u0412\u0441\u0435 \u043A\u0443\u0440\u0441\u044B
-
+header.contents=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
 
