login/logout/remember me

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -86,3 +86,15 @@ test.result.false=False
 header.catalog=Catalog
 header.all_courses=All courses
 header.contents=Contents
+login=Log in
+register=Register
+username=User name
+password=Password
+do.login=Login
+confirm_password=Confirm
+surname=Surname
+firstname=First name
+middlename=Middle name
+logout=Log out
+rememberme=Remember me
+
